<resources>
    <string name="app_name">App</string>
    <string name="edit_icon">Edit</string>
    <string name="back_icon">Go Back</string>
    <string name="edit_add_button"> Add/Edit Button</string>
    <string name="edit_button"> Edit </string>
    <string name="add_button"> Add </string>
    <string name="save_button"> Save </string>
    
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="delete_this_category">Delete This Category</string>
    <string name="category_type">Category Type</string>
    <string name="category_name">Category Name</string>
    <string name="category_type_cannot_be_changed">Category type can\'t be changed after a category is created</string>

    <string name="add_account">Add account</string>
    <string name="hint_account_name">Enter account name</string>
    <string name="hint_account_overdue_limit">Enter overdue limit</string>
    <string name="amount">Amount</string>
    <string name="button_save">Save</string>
    <string name="transaction_type">Type</string>
    <string name="transaction_category">Category</string>
    <string name="categories">Categories</string>

    <string name="account_list">Account List</string>
    <string name="transaction_list">Transaction List</string>
    <string name="category_list">Category List</string>
    <string name="name">Name</string>
    <string name="save_category">Save Category</string>
    <string name="create_category">Create Category</string>
    <string name="enter_spending_limit">Enter spending limit</string>
    <string name="report">Report</string>
    <string name="date">Date</string>
    <string name="generate_chart">Generate Chart</string>
    <string name="hint_report">Days to include in the search after the date</string>
  <string name="no_category"><![CDATA[<no category>]]></string>
</resources>