<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/account_name_edit_add"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/account_field_top_margin"
        android:ems="10"
        android:hint="@string/hint_account_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_limit_edit_add"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/account_spinner_top_margin"
        android:ems="10"
        android:hint="@string/enter_spending_limit"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_type_spinner" />

    <Spinner
        android:id="@+id/account_type_spinner"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/account_spinner_top_margin"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name_edit_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/edit_or_add_account_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/account_spinner_top_margin"
        android:text="@string/edit_add_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_limit_edit_add" />

</androidx.constraintlayout.widget.ConstraintLayout>